--- a/index.html
+++ b/index.html
@@ -47,6 +47,9 @@
                 <li class="sidebar__item">
                     <a class="sidebar__link" href="#grid"><i class="fas fa-play"></i>Различные способы расположения элементов в сетке</a>
                 </li>
+                <li class="sidebar__item">
+                    <a class="sidebar__link" href="#form-section"><i class="fas fa-play"></i>Многоколоночная форма</a>
+                </li>
             </ul>
         </aside>
         <main class="main">
@@ -345,6 +348,46 @@
 
 
 
+            </section>
+
+            <section id="form-section">
+                <h2>Многоколоночная форма</h2>
+
+                <div class="section__item">
+                    <form id="form" class="form">
+                        <div class="form__inputs">
+                            <div class="form__item">
+                                <label for="name">Имя</label>
+                                <input class="form__input" name="name" id="name" type="text">
+                            </div>
+                            <div class="form__item">
+                                <label for="surname">Фамилия</label>
+                                <input class="form__input" name="surname" id="surname" type="text">
+                            </div>
+                            <div class="form__item">
+                                <label for="phone">Телефон</label>
+                                <input class="form__input" name="phone" id="phone" type="tel">
+                            </div>
+                            <div class="form__item">
+                                <label for="index">Индекс</label>
+                                <input class="form__input" name="index" id="index" type="text">
+                            </div>
+                            <div class="form__item">
+                                <label for="country">Страна</label>
+                                <input class="form__input" name="country" id="country" type="text">
+                            </div>
+                            <div class="form__item">
+                                <label for="city">Город</label>
+                                <input class="form__input" name="city" id="city" type="text">
+                            </div>
+
+                        </div>
+                        <div class="form__item form__item_button">
+                            <input class="form__button" type="submit" value="Отправить">
+                        </div>
+                        
+                    </form>
+                </div>
             </section>
         </main>
         <footer class="footer">
